chore: Improve UI and responsiveness across admin and teacher pages
- Enhanced Analytics dashboard with better stats cards and responsive layout
- Improved ClassManagement with gradient headers and responsive table
- Added modern styles to modals and forms
- Improved teacher dashboard and profile pages with animations
- Made all components responsive for mobile, tablet, and desktop

--- a/proactive-education-assistant/src/locales/en/translation.json
+++ b/proactive-education-assistant/src/locales/en/translation.json
@@ -271,7 +271,7 @@
     "page_title": "Sign In",
     "page_subtitle": "Welcome back! Please sign in to continue.",
     "email_label": "Email Address",
-    "email_placeholder": "you@example.com",
+    "email_placeholder": "educator@school.org",
     "password_label": "Password",
     "password_placeholder": "Enter your password",
     "remember_me": "Remember me",
@@ -279,29 +279,39 @@
     "sign_in_button": "Sign In",
     "signing_in": "Signing in...",
     "no_account": "Don't have an account?",
-    "sign_up_link": "Sign up"
+    "sign_up_link": "Sign up",
+    "select_role": "Select Your Role",
+    "offline_note": "Works offline after first login.",
+    "demo_credentials": "Demo Credentials:",
+    "teacher_demo": "Teacher",
+    "admin_demo": "Admin",
+    "or": "or",
+    "demo_password": "Password"
   },
   "signup": {
     "page_title": "Create Account",
-    "page_subtitle": "Join us to start tracking and preventing student dropout.",
+    "page_subtitle": "Create Educator Account",
     "name_label": "Full Name",
     "name_placeholder": "John Doe",
     "email_label": "Email Address",
-    "email_placeholder": "you@example.com",
+    "email_placeholder": "educator@school.org",
     "password_label": "Password",
-    "password_placeholder": "Create a strong password",
+    "password_placeholder": "Create a secure password",
     "confirm_password_label": "Confirm Password",
     "confirm_password_placeholder": "Re-enter password",
-    "role_label": "Role",
+    "role_label": "Your Role",
     "role_teacher": "Teacher",
-    "role_fieldworker": "Fieldworker",
+    "role_fieldworker": "Field Worker",
     "role_ngo": "NGO Staff",
-    "role_admin": "Admin",
+    "role_admin": "Coordinator",
+    "organization_label": "School / Organization Name",
+    "organization_placeholder": "Springfield High School",
     "agree_terms": "I agree to the Terms and Conditions",
-    "sign_up_button": "Sign Up",
+    "sign_up_button": "Create Account",
     "signing_up": "Creating account...",
     "already_have_account": "Already have an account?",
-    "sign_in_link": "Sign in"
+    "sign_in_link": "Sign in",
+    "info_note": "Student accounts are not required. This platform is exclusively for educators and coordinators."
   },
   "errors": {
     "404_title": "404 - Page Not Found",
@@ -312,5 +322,40 @@
     "high": "High Risk",
     "medium": "Medium Risk",
     "low": "Low Risk"
+  },
+  "profile": {
+    "myProfile": "My Profile",
+    "manageInfo": "Manage your account information",
+    "personalInfo": "Personal Information",
+    "fullName": "Full Name",
+    "email": "Email Address",
+    "subject": "Subject/Specialization",
+    "subjectPlaceholder": "e.g., Mathematics",
+    "status": "Account Status",
+    "notSpecified": "Not specified",
+    "active": "Active",
+    "teacher": "Teacher",
+    "assignedClasses": "Assigned Classes",
+    "noClasses": "No classes assigned",
+    "security": "Security Settings",
+    "twoFactor": "Two-Factor Authentication",
+    "twoFactorDesc": "Add an extra layer of security to your account",
+    "loginAlerts": "Login Alerts",
+    "loginAlertsDesc": "Get notified about new device logins",
+    "signOut": "Sign Out",
+    "signOutDesc": "You can sign back in anytime",
+    "accountInfo": "Account Information",
+    "accountInfoDesc": "Your profile information is used to personalize your experience and manage class assignments. Contact your administrator if you need to update your assigned classes.",
+    "updateSuccess": "Profile updated successfully!"
+  },
+  "common": {
+    "edit": "Edit",
+    "cancel": "Cancel",
+    "save": "Save",
+    "logout": "Logout",
+    "logoutConfirm": "Are you sure you want to logout?",
+    "goHome": "Go to Home",
+    "enable": "Enable",
+    "manage": "Manage"
   }
 }
