--- a/proactive-education-assistant/src/locales/hi/translation.json
+++ b/proactive-education-assistant/src/locales/hi/translation.json
@@ -192,6 +192,87 @@
     "high": "उच्च जोखिम",
     "medium": "मध्यम जोखिम",
     "low": "कम जोखिम"
+  },
+  "login": {
+    "page_title": "साइन इन करें",
+    "page_subtitle": "फिर से स्वागत है! जारी रखने के लिए साइन इन करें।",
+    "email_label": "ईमेल पता",
+    "email_placeholder": "educator@school.org",
+    "password_label": "पासवर्ड",
+    "password_placeholder": "अपना पासवर्ड दर्ज करें",
+    "remember_me": "मुझे याद रखें",
+    "forgot_password": "पासवर्ड भूल गए?",
+    "sign_in_button": "साइन इन करें",
+    "signing_in": "साइन इन किया जा रहा है...",
+    "no_account": "खाता नहीं है?",
+    "sign_up_link": "साइन अप करें",
+    "select_role": "अपनी भूमिका चुनें",
+    "offline_note": "पहली लॉगिन के बाद ऑफलाइन काम करता है।",
+    "demo_credentials": "डेमो क्रेडेंशियल:",
+    "teacher_demo": "शिक्षक",
+    "admin_demo": "व्यवस्थापक",
+    "or": "या",
+    "demo_password": "पासवर्ड"
+  },
+  "signup": {
+    "page_title": "खाता बनाएं",
+    "page_subtitle": "शिक्षक खाता बनाएं",
+    "name_label": "पूरा नाम",
+    "name_placeholder": "जॉन डो",
+    "email_label": "ईमेल पता",
+    "email_placeholder": "educator@school.org",
+    "password_label": "पासवर्ड",
+    "password_placeholder": "एक सुरक्षित पासवर्ड बनाएं",
+    "confirm_password_label": "पासवर्ड की पुष्टि करें",
+    "confirm_password_placeholder": "पासवर्ड फिर से दर्ज करें",
+    "role_label": "आपकी भूमिका",
+    "role_teacher": "शिक्षक",
+    "role_fieldworker": "फील्ड वर्कर",
+    "role_ngo": "एनजीओ स्टाफ",
+    "role_admin": "समन्वयक",
+    "organization_label": "स्कूल / संगठन का नाम",
+    "organization_placeholder": "स्प्रिंगफील्ड हाई स्कूल",
+    "agree_terms": "मैं नियम और शर्तों से सहमत हूँ",
+    "sign_up_button": "खाता बनाएं",
+    "signing_up": "खाता बनाया जा रहा है...",
+    "already_have_account": "पहले से खाता है?",
+    "sign_in_link": "साइन इन करें",
+    "info_note": "छात्र खातों की आवश्यकता नहीं है। यह प्लेटफॉर्म केवल शिक्षकों और समन्वयकों के लिए है।"
+  },
+  "profile": {
+    "myProfile": "मेरी प्रोफ़ाइल",
+    "manageInfo": "अपनी खाता जानकारी प्रबंधित करें",
+    "personalInfo": "व्यक्तिगत जानकारी",
+    "fullName": "पूरा नाम",
+    "email": "ईमेल पता",
+    "subject": "विषय/विशेषज्ञता",
+    "subjectPlaceholder": "जैसे, गणित",
+    "status": "खाता स्थिति",
+    "notSpecified": "निर्दिष्ट नहीं",
+    "active": "सक्रिय",
+    "teacher": "शिक्षक",
+    "assignedClasses": "निर्दिष्ट कक्षाएं",
+    "noClasses": "कोई कक्षा निर्दिष्ट नहीं",
+    "security": "सुरक्षा सेटिंग्स",
+    "twoFactor": "दो-कारक प्रमाणीकरण",
+    "twoFactorDesc": "अपने खाते में सुरक्षा की एक अतिरिक्त परत जोड़ें",
+    "loginAlerts": "लॉगिन अलर्ट",
+    "loginAlertsDesc": "नए डिवाइस लॉगिन के बारे में सूचनाएं प्राप्त करें",
+    "signOut": "साइन आउट",
+    "signOutDesc": "आप कभी भी फिर से साइन इन कर सकते हैं",
+    "accountInfo": "खाता जानकारी",
+    "accountInfoDesc": "आपकी प्रोफ़ाइल जानकारी आपके अनुभव को व्यक्तिगत करने और कक्षा असाइनमेंट प्रबंधित करने के लिए उपयोग की जाती है। यदि आपको अपनी निर्दिष्ट कक्षाओं को अपडेट करने की आवश्यकता है तो अपने प्रशासक से संपर्क करें।",
+    "updateSuccess": "प्रोफ़ाइल सफलतापूर्वक अपडेट हो गई!"
+  },
+  "common": {
+    "edit": "संपादित करें",
+    "cancel": "रद्द करें",
+    "save": "सहेजें",
+    "logout": "लॉगआउट करें",
+    "logoutConfirm": "क्या आप लॉगआउट करना सुनिश्चित हैं?",
+    "goHome": "होम पर जाएं",
+    "enable": "सक्षम करें",
+    "manage": "प्रबंधित करें"
   }
 }
 
