--- a/proactive-education-assistant/src/locales/mr/translation.json
+++ b/proactive-education-assistant/src/locales/mr/translation.json
@@ -192,5 +192,86 @@
     "high": "उच्च जोखीम",
     "medium": "मध्यम जोखीम",
     "low": "कमी जोखीम"
+  },
+  "login": {
+    "page_title": "साइन इन करा",
+    "page_subtitle": "पुन्हा स्वागत आहे! सुरू करण्यासाठी साइन इन करा।",
+    "email_label": "ईमेल पत्ता",
+    "email_placeholder": "educator@school.org",
+    "password_label": "पासवर्ड",
+    "password_placeholder": "तुमचा पासवर्ड प्रविष्ट करा",
+    "remember_me": "मला लक्षात ठेवा",
+    "forgot_password": "पासवर्ड विसरला?",
+    "sign_in_button": "साइन इन करा",
+    "signing_in": "साइन इन केले जात आहे...",
+    "no_account": "खाते नाही?",
+    "sign_up_link": "साइन अप करा",
+    "select_role": "तुमची भूमिका निवडा",
+    "offline_note": "पहिल्या लॉगइनच्या नंतर ऑफलाइन काम करते।",
+    "demo_credentials": "डेमो क्रेडेंशियल:",
+    "teacher_demo": "शिक्षक",
+    "admin_demo": "व्यवस्थापक",
+    "or": "किंवा",
+    "demo_password": "पासवर्ड"
+  },
+  "signup": {
+    "page_title": "खाते तयार करा",
+    "page_subtitle": "शिक्षक खाते तयार करा",
+    "name_label": "पूर्ण नाव",
+    "name_placeholder": "जॉन डो",
+    "email_label": "ईमेल पत्ता",
+    "email_placeholder": "educator@school.org",
+    "password_label": "पासवर्ड",
+    "password_placeholder": "सुरक्षित पासवर्ड तयार करा",
+    "confirm_password_label": "पासवर्डची पुष्टी करा",
+    "confirm_password_placeholder": "पासवर्ड पुन्हा प्रविष्ट करा",
+    "role_label": "तुमची भूमिका",
+    "role_teacher": "शिक्षक",
+    "role_fieldworker": "क्षेत्र कार्यकर्ता",
+    "role_ngo": "NGO कर्मचारी",
+    "role_admin": "समन्वयक",
+    "organization_label": "शाळा / संस्थेचे नाव",
+    "organization_placeholder": "स्प्रिंगफील्ड हाय स्कूल",
+    "agree_terms": "मी नियम आणि शर्तींशी सहमत आहे",
+    "sign_up_button": "खाते तयार करा",
+    "signing_up": "खाते तयार केले जात आहे...",
+    "already_have_account": "आधीपासून खाते आहे?",
+    "sign_in_link": "साइन इन करा",
+    "info_note": "विद्यार्थी खातांची आवश्यकता नाही। हा प्लॅटफॉर्म केवळ शिक्षकांसाठी आणि समन्वयकांसाठी आहे।"
+  },
+  "profile": {
+    "myProfile": "माझी प्रोफाइल",
+    "manageInfo": "आपल्या खाते माहिती व्यवस्थापित करा",
+    "personalInfo": "व्यक्तिगत माहिती",
+    "fullName": "पूर्ण नाव",
+    "email": "ईमेल पत्ता",
+    "subject": "विषय/विशेषज्ञता",
+    "subjectPlaceholder": "उदा, गणित",
+    "status": "खाते स्थिती",
+    "notSpecified": "निर्दिष्ट केले नाही",
+    "active": "सक्रिय",
+    "teacher": "शिक्षक",
+    "assignedClasses": "नियुक्त वर्ग",
+    "noClasses": "कोणतेही वर्ग नियुक्त केले नाही",
+    "security": "सुरक्षा सेटिंग्ज",
+    "twoFactor": "दोन-घटक प्रमाणीकरण",
+    "twoFactorDesc": "आपल्या खाते मध्ये सुरक्षेची अतिरिक्त परत जोडा",
+    "loginAlerts": "लॉगइन सूचना",
+    "loginAlertsDesc": "नवीन डिव्हाइस लॉगइन बद्दल सूचित होा",
+    "signOut": "साइन आउट",
+    "signOutDesc": "आप कधीही पुन्हा साइन इन करू शकता",
+    "accountInfo": "खाते माहिती",
+    "accountInfoDesc": "आपली प्रोफाइल माहिती आपल्या अनुभवला वैयक्तिक करण्यासाठी आणि वर्ग असाइनमेंट व्यवस्थापित करण्यासाठी वापरली जाते। यदि आपल्याला आपल्या नियुक्त वर्गांचे अपडेट करणे आवश्यक असल्यास आपल्या प्रशासकाशी संपर्क साधा।",
+    "updateSuccess": "प्रोफाइल यशस्वीरित्या अपडेट केली गेली!"
+  },
+  "common": {
+    "edit": "संपादित करा",
+    "cancel": "रद्द करा",
+    "save": "जतन करा",
+    "logout": "लॉगआउट करा",
+    "logoutConfirm": "तुम्ही लॉगआउट करत असल्याचे तुम्ही निश्चित आहात?",
+    "goHome": "होमवर जा",
+    "enable": "सक्षम करा",
+    "manage": "व्यवस्थापित करा"
   }
 }
